--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
    <h1>Bem-vindo a minha página do ColabEduc</h1>
    <p>Aqui vocês terão acessos a todos os meus jogos.</p>
-
+   <a href="https://cadulop.github.io/eviteacidentes/" target="_blank">Visite meu jogo Evite Acidentes!</a>
   </body>
 </html>
